# climate-indices

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py  tox.ini
climate_indices/: __init__.py  aao.py  anomalies.py  ao.py  blocking.py  eofs.py  hadley.py  mei.py  nao.py  nhtele.py  pna.py  psa.py  scand.py  tibaldi.py  timeavg.py
climate_indices/eofs/: __init__.py  _eofs_dask_backend.py  _eofs_default_backend.py
climate_indices/utils/: _dates.py  _validation.py
examples/aao/: daily_aao.py  monthly_aao.py
examples/ao/: daily_ao.py  monthly_ao.py
examples/blocking/: daily_tibaldi.py  wright_bom_blocking.py
examples/mei/: create_mei_input.py  generate_region_mask.py  regrid_data.py  seasonal_mei.py
examples/nao/: daily_nao_index.py  nao_eof.py
examples/nhtele/: kmeans_pc_composites.py
examples/pna/: daily_pna_index.py
examples/psa/: daily_psa1_index.py
examples/scand/: daily_scand.py
src/climate_indices/: __init__.py  version.py
src/climate_indices/indices/: __init__.py  ao.py  enso.py  indian_pacific_ocean.dbf  indian_pacific_ocean.shp  indian_pacific_ocean.shx  indopacific_sst.py  iod.py  mjo.py  nao.py  ne_110m_mei_region.dbf  ne_110m_mei_region.shp  ne_110m_mei_region.shx  nhtele.py  pna.py  psa.py  sam.py
src/climate_indices/utils/: __init__.py  defaults.py  eofs.py  latlon.py  validation.py
tests/: test_defaults.py  test_eofs.py  test_latlon.py  test_version.py
