[metadata]
name = climate_indices
version = attr: climate_indices.__version__
author = Dylan Harries
author_email = Dylan.Harries@csiro.au
description = Package providing various climate indices
long_description = file: README.md, LICENSE
url = https://github.com/azedarach/climate-indices
license = MIT
classifiers =
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find:
python_requires = >=3.8
install_requires =
    dask
    dask[array]
    numpy
    scipy
    xarray
setup_requires =
    setuptools >= 40.6

[options.packages.find]
where=src
